--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 * {
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #333;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #333;
 }
 
-.App {
-    overflow: hidden;
-
+.app {
+  width: 100%;
 }
