--- a/src/comps/dashboard/dashboard.scss
+++ b/src/comps/dashboard/dashboard.scss
@@ -4,4 +4,9 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding-top: 205px;
+}
+
+body {
+  background-image: url("~/public/img/dashboard/kids-toys-frame-concept-free-vector.jpg");
 }
